--- a/themes/gdd/static/css/style.css
+++ b/themes/gdd/static/css/style.css
@@ -51,9 +51,23 @@ th {
 	background-color: #F5FAFA;
 }
 
+.th_first {
+	width: 250px;
+	height: 40px;
+	max-width: 100%;
+	max-height: 100%;
+}
+
 td {
 	border: 1px solid rgba(0,0,0,0.1);
 	border-radius: 5px 0px 0px 0px;
+}
+
+td img {
+	max-width: 100%;
+	max-height: 100%;
+	height: auto;
+	display: block;
 }
 
 td.good {
