Normalizing size of smiley faces and icons. Updated amazon to be correct stats.

--- a/themes/gdd/layouts/_default/baseof.html
+++ b/themes/gdd/layouts/_default/baseof.html
@@ -70,19 +70,19 @@
 
                 <td>{{if ne (index $r 4) ""}}<a href="{{ index $r 4 }}">Link</a>{{end}}</td>
 
-                <td {{if eq (index $r 5) "Yes"}}class="yes"><img src="/faces/yes.png">{{else if eq (index $r 5) "Some"}}class="some"><img src="/faces/some.png">{{else}}class="no"><img src="/faces/no.png">{{end}}</td>
-                <td>{{ index $r 6 }}</td>
-                <td>{{ index $r 7 }}</td>
-                <td>{{ index $r 8 }}</td>
-                <td>{{ index $r 9 }}</td>
-                <td>{{ index $r 10 }}</td>
-                <td>{{ index $r 11 }}</td>
-                <td>{{ index $r 12 }}</td>
-                <td>{{ index $r 13 }}</td>
-                <td>{{ index $r 14 }}</td>
-                <td>{{ index $r 15 }}</td>
-                <td>{{ index $r 16 }}</td>
-                <td>{{ index $r 17 }}</td>
+                <td {{if eq (index $r 5) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 5) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 6) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 6) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 7) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 7) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 8) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 8) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 9) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 9) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 10) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 10) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 11) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 11) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 12) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 12) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 13) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 13) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 14) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 14) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 15) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 15) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 16) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 16) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
+                <td {{if eq (index $r 17) "Yes"}}class="yes smile"><img src="/faces/yes.png">{{else if eq (index $r 17) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="no smile"><img src="/faces/no.png">{{end}}</td>
                 <td>{{ index $r 18 }}</td>
               </tr>
               {{ end }}
