--- a/themes/gdd/static/css/style.css
+++ b/themes/gdd/static/css/style.css
@@ -63,10 +63,18 @@ td {
 	border-radius: 5px 0px 0px 0px;
 }
 
-td img {
+td.th_first img {
 	max-width: 100%;
 	max-height: 100%;
 	height: auto;
+	display: block;
+}
+
+td.smile img {
+	width: 35px;
+	height: 35px;
+	margin-left: auto;
+	margin-right: auto;
 	display: block;
 }
 
