Adding graphics at the top to show good, some, bad data.

--- a/themes/gdd/layouts/_default/baseof.html
+++ b/themes/gdd/layouts/_default/baseof.html
@@ -23,7 +23,16 @@
         <div class="title">
           <h1>{{ .Site.Title }}</h1>
         </div>
-        <p>Help us gather accurate data on the state of equitable representation in the games industry.</p>
+        <h3>Help us gather accurate data on the state of equitable representation in the games industry.</h3>
+        <div class="outer true">
+          <img class="internal" src="/faces/yes.png"><div class="internal"><h4>: Lots of data</h4></div>
+        </div>
+        <div class="outer some">
+          <img class="internal" src="/faces/some.png"><div class="internal"><h4>: Some data</h4></div>
+        </div>
+        <div class="outer false">
+          <img class="internal" src="/faces/no.png"><div class="internal"><h4>: No data</h4></div>
+        </div>
         <br>
       </div>
       <div class="section">
