--- a/themes/gdd/static/css/style.css
+++ b/themes/gdd/static/css/style.css
@@ -53,9 +53,20 @@ th {
 
 .th_first {
 	width: 250px;
+	min-width: 200px;
 	height: 40px;
 	max-width: 100%;
 	max-height: 100%;
+	text-align: center;
+}
+
+.th_rest {
+	width: 55px;
+	min-width: 55px;
+	max-width: 55px;
+	font-size: 12px;
+	text-align: center;
+	vertical-align: center;
 }
 
 td {
@@ -76,11 +87,15 @@ div.outer {
 	margin-left: 35%;
 }
 
+td.link {
+	text-align: center;
+}
+
 td.th_first img {
 	max-width: 100%;
 	max-height: 100%;
 	height: auto;
-	display: block;
+	display: inline-block;
 }
 
 img.internal {
