--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -1,2 +1,82 @@
 {{ define "main" }}
+    <div class="main column">
+      <div class="header">
+        <div class="title">
+          <h1>{{ .Site.Title }}</h1>
+        </div>
+        <h3>Help us gather accurate data on the state of equitable representation in the games industry.</h3>
+        <div class="outer true">
+          <img class="internal" src="/faces/yes.png"><div class="internal"><h4>: Lots of data</h4></div>
+        </div>
+        <div class="outer some">
+          <img class="internal" src="/faces/some.png"><div class="internal"><h4>: Some data</h4></div>
+        </div>
+        <div class="outer false">
+          <img class="internal" src="/faces/no.png"><div class="internal"><h4>: No data</h4></div>
+        </div>
+        <br>
+      </div>
+      <div class="section">
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="th_first"><h2>Company</h2></th>
+              <th class="th_rest">Data</th>
+              <th class="th_rest">Gender</th>
+              <th class="th_rest">Ethnicity</th>
+              <th class="th_rest">LGBTQ+</th>
+              <th class="th_rest">Disabled</th>
+              <th class="th_rest">Targets</th>
+              <th class="th_rest">Leadership / Engineering</th>
+              <th class="th_rest">Age</th>
+              <th class="th_rest">Retention</th>
+              <th class="th_rest">Equal Pay</th>
+              <th class="th_rest">Promotion Rates</th>
+              <th class="th_rest">Complaints</th>
+              <th class="th_rest">EEO-1</th>
+              <th class="th_rest">Open Data</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{ $url := "/content/data.csv" }}
+            {{ $sep := "," }}
+            {{ range $i, $r := getCSV $sep $url }}
+              {{ if ne $i 0 }}
+              <tr>
+                {{ $icon := index $r 3 }}
+                {{ $hasdata := ne (index $r 4) "" }}
+                {{ $subsidiary := index $r 1 }}
+                <td class="th_first {{$hasdata}}">
+                {{ if ne $subsidiary "" }}
+                  {{ if ne $icon "" }}<a href="{{ index $r 2 }}"><img src="/icons/{{ $icon }}"></a>{{ else }}<a href="{{ index $r 2 }}">{{ $subsidiary }}</a>{{ end }}
+                {{ else }}
+                  {{ if ne $icon "" }}<a href="{{ index $r 2 }}"><img src="/icons/{{ $icon }}"></a>{{ else }}<a href="{{ index $r 2 }}">{{ index $r 0 }}</a>{{ end }}
+                {{ end }}
+                </td>
+
+                {{if $hasdata}}
+                  <td class="link true"><a href="{{ index $r 4 }}">{{if ne (index $r 18) ""}}{{index $r 18}}{{else}}Link{{end}}</a></td>
+                  <td {{if eq (index $r 5) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 5) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 6) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 6) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 7) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 7) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 8) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 8) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 9) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 9) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 10) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 10) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 11) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 11) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 12) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 12) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 13) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 13) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 14) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 14) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 15) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 15) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 16) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 16) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  <td {{if eq (index $r 17) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 17) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                {{else}}
+                  <td colspan="14" class="false nodata"><img src="/faces/no.png" class="internal"><div class="internal">No Data</div></td>
+                {{end}}
+              </tr>
+              {{ end }}
+            {{ end }}
+          </tbody>
+        </table>
+      </div>
+    </div>
 {{ end }}
