Changing icons from faces to check, dash, and x. Shrinking page a bit.

--- a/themes/gdd/layouts/index.html
+++ b/themes/gdd/layouts/index.html
@@ -6,13 +6,13 @@
         </div>
         <h3>Help us gather accurate data on the state of equitable representation in the games industry.</h3>
         <div class="outer true">
-          <img class="internal" src="/faces/yes.png"><div class="internal"><h4>: Lots of data</h4></div>
+          <img class="internal" src="/dataicons/lots.png"><div class="internal"><h4>: Lots of data</h4></div>
         </div>
         <div class="outer some">
-          <img class="internal" src="/faces/some.png"><div class="internal"><h4>: Some data</h4></div>
+          <img class="internal" src="/dataicons/some.png"><div class="internal"><h4>: Some data</h4></div>
         </div>
         <div class="outer false">
-          <img class="internal" src="/faces/no.png"><div class="internal"><h4>: No data</h4></div>
+          <img class="internal" src="/dataicons/none.png"><div class="internal"><h4>: No data</h4></div>
         </div>
         <br>
       </div>
@@ -25,16 +25,16 @@
               <th class="th_rest">Gender</th>
               <th class="th_rest">Ethnicity</th>
               <th class="th_rest">LGBTQ+</th>
-              <th class="th_rest">Disabled</th>
-              <th class="th_rest">Targets</th>
-              <th class="th_rest">Leadership / Engineering</th>
+              <th class="th_rest">Disability</th>
               <th class="th_rest">Age</th>
+              <!--<th class="th_rest">Leadership / Engineering</th>
+              <th class="th_rest">Targets</th>
               <th class="th_rest">Retention</th>
               <th class="th_rest">Equal Pay</th>
               <th class="th_rest">Promotion Rates</th>
               <th class="th_rest">Complaints</th>
               <th class="th_rest">EEO-1</th>
-              <th class="th_rest">Open Data</th>
+              <th class="th_rest">Open Data</th>-->
             </tr>
           </thead>
           <tbody>
@@ -42,11 +42,11 @@
             {{ $sep := "," }}
             {{ range $i, $r := getCSV $sep $url }}
               {{ if ne $i 0 }}
-              <tr>
                 {{ $icon := index $r 3 }}
                 {{ $hasdata := ne (index $r 4) "" }}
                 {{ $subsidiary := index $r 1 }}
-                <td class="th_first {{$hasdata}}">
+              <tr class="{{$hasdata}}">
+                <td class="th_first">
                 {{ if ne $subsidiary "" }}
                   {{ if ne $icon "" }}<a href="{{ index $r 2 }}"><img src="/icons/{{ $icon }}"></a>{{ else }}<a href="{{ index $r 2 }}">{{ $subsidiary }}</a>{{ end }}
                 {{ else }}
@@ -55,22 +55,28 @@
                 </td>
 
                 {{if $hasdata}}
-                  <td class="link true"><a href="{{ index $r 4 }}">{{if ne (index $r 18) ""}}{{index $r 18}}{{else}}Link{{end}}</a></td>
-                  <td {{if eq (index $r 5) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 5) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 6) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 6) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 7) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 7) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 8) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 8) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 9) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 9) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 10) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 10) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 11) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 11) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 12) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 12) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 13) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 13) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 14) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 14) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 15) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 15) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 16) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 16) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
-                  <td {{if eq (index $r 17) "Yes"}}class="true smile"><img src="/faces/yes.png">{{else if eq (index $r 17) "Some"}}class="some smile"><img src="/faces/some.png">{{else}}class="false smile"><img src="/faces/no.png">{{end}}</td>
+                  {{ $gender := index $r 5 }}
+                  {{ $ethnicity := index $r 6 }}
+                  {{ $lgtbq := index $r 7 }}
+                  {{ $disability := index $r 8 }}
+                  {{ $age := index $r 11 }}
+                  
+                  <td class="link"><a href="{{ index $r 4 }}">{{if ne (index $r 18) ""}}{{index $r 18}}{{else}}Link{{end}}</a></td>
+                  <td {{if eq $gender "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq $gender "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq $ethnicity "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq $ethnicity "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq $lgtbq "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq $lgtbq "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq $disability "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq $disability "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq $age "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq $age "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <!--<td {{if eq (index $r 10) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 10) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 9) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 11) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 12) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 12) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 13) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 13) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 14) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 14) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 15) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 15) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 16) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 16) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>
+                  <td {{if eq (index $r 17) "Yes"}}class="smile"><img src="/dataicons/lots.png">{{else if eq (index $r 17) "Some"}}class="smile"><img src="/dataicons/some.png">{{else}}class="smile"><img src="/dataicons/none.png">{{end}}</td>-->
                 {{else}}
-                  <td colspan="14" class="false nodata"><img src="/faces/no.png" class="internal"><div class="internal">No Data</div></td>
+                  <td colspan="14" class="nodata"><img src="/dataicons/no.png" class="internal"><div class="internal">No Data</div></td>
                 {{end}}
               </tr>
               {{ end }}
